added content type header to all request

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
-    <title>Hello React</title>
+    <title>Brownboard</title>
 </head>
 <body>
     <div id="app"></div>
